@@ -1,3 +1,6 @@
+Changelog v5.2.19 (2025-05-17):
+- Removed Difflib and Fuzzy Matching
+
 Changelog v5.2.18 (2025-05-13):
 - Added Trailers to Anilist Watchlist
 
